--- a/hazi_adatprofilozas.ipynb
+++ b/hazi_adatprofilozas.ipynb
@@ -1768,7 +1768,8 @@
             ],
             "metadata": {
                 "azdata_cell_guid": "e89b14d4-b1a5-4bfa-be0b-091e1be62e67",
-                "language": "sql"
+                "language": "sql",
+                "tags": []
             },
             "outputs": [
                 {
@@ -1781,13 +1782,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.007"
+                        "text/html": "Total execution time: 00:00:00.009"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
-                    "execution_count": 14,
+                    "metadata": {},
+                    "execution_count": 17,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -1843,12 +1845,25 @@
                                 }
                             ]
                         },
-                        "text/html": "<table><tr><th>Műfajok</th><th>Előfordulás</th></tr><tr><td>játék</td><td>60</td></tr><tr><td>ismeretterjesztő</td><td>46</td></tr><tr><td>nyelvtanító</td><td>42</td></tr><tr><td>történelem</td><td>41</td></tr><tr><td>földrajz</td><td>16</td></tr><tr><td>irodalom</td><td>16</td></tr><tr><td>matematika</td><td>9</td></tr><tr><td>csillagászat</td><td>7</td></tr><tr><td>szótár</td><td>7</td></tr><tr><td>felvételi</td><td>6</td></tr></table>"
-                    },
-                    "metadata": {}
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>Műfajok</th><th>Előfordulás</th></tr>",
+                            "<tr><td>játék</td><td>60</td></tr>",
+                            "<tr><td>ismeretterjesztő</td><td>46</td></tr>",
+                            "<tr><td>nyelvtanító</td><td>42</td></tr>",
+                            "<tr><td>történelem</td><td>41</td></tr>",
+                            "<tr><td>földrajz</td><td>16</td></tr>",
+                            "<tr><td>irodalom</td><td>16</td></tr>",
+                            "<tr><td>matematika</td><td>9</td></tr>",
+                            "<tr><td>csillagászat</td><td>7</td></tr>",
+                            "<tr><td>szótár</td><td>7</td></tr>",
+                            "<tr><td>felvételi</td><td>6</td></tr>",
+                            "</table>"
+                        ]
+                    }
                 }
             ],
-            "execution_count": 14
+            "execution_count": 17
         },
         {
             "cell_type": "code",
@@ -2312,11 +2327,304 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT MIN(nettoar) AS 'Minimum', \r\n",
+                "       MAX(nettoar) AS 'Maximum', \r\n",
+                "       AVG(nettoar) AS 'Átlag', \r\n",
+                "       STDEV(nettoar) AS 'Szórás', \r\n",
+                "       VAR(nettoar) AS 'Szórás négyzet'\r\n",
+                "FROM dvd\r\n",
+                "WHERE nettoar IS NOT NULL"
             ],
             "metadata": {
                 "language": "sql",
                 "azdata_cell_guid": "603b9d87-fcc3-4a41-a19b-c8d8e9ca96dd"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.009"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 16,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "Minimum"
+                                    },
+                                    {
+                                        "name": "Maximum"
+                                    },
+                                    {
+                                        "name": "Átlag"
+                                    },
+                                    {
+                                        "name": "Szórás"
+                                    },
+                                    {
+                                        "name": "Szórás négyzet"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "Minimum": "3102",
+                                    "Maximum": "6098",
+                                    "Átlag": "4682,336477987421",
+                                    "Szórás": "871,86613556767",
+                                    "Szórás négyzet": "760150,5583497026"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>Minimum</th><th>Maximum</th><th>Átlag</th><th>Szórás</th><th>Szórás négyzet</th></tr>",
+                            "<tr><td>3102</td><td>6098</td><td>4682,336477987421</td><td>871,86613556767</td><td>760150,5583497026</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 16
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT TOP 10 \r\n",
+                "    nettoar as 'Ár',\r\n",
+                "    COUNT(*) as 'Előfordulás'\r\n",
+                "FROM dvd\r\n",
+                "WHERE nettoar IS NOT NULL\r\n",
+                "GROUP BY nettoar\r\n",
+                "ORDER BY COUNT(*) DESC"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "39f79eea-24e2-48c1-baa5-f78eb42db3f4"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(10 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.007"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 18,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "Ár"
+                                    },
+                                    {
+                                        "name": "Előfordulás"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "Ár": "3737",
+                                    "Előfordulás": "3"
+                                },
+                                {
+                                    "Ár": "3313",
+                                    "Előfordulás": "2"
+                                },
+                                {
+                                    "Ár": "3391",
+                                    "Előfordulás": "2"
+                                },
+                                {
+                                    "Ár": "3419",
+                                    "Előfordulás": "2"
+                                },
+                                {
+                                    "Ár": "3914",
+                                    "Előfordulás": "2"
+                                },
+                                {
+                                    "Ár": "4632",
+                                    "Előfordulás": "2"
+                                },
+                                {
+                                    "Ár": "4877",
+                                    "Előfordulás": "2"
+                                },
+                                {
+                                    "Ár": "5459",
+                                    "Előfordulás": "2"
+                                },
+                                {
+                                    "Ár": "5476",
+                                    "Előfordulás": "2"
+                                },
+                                {
+                                    "Ár": "5845",
+                                    "Előfordulás": "2"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>Ár</th><th>Előfordulás</th></tr>",
+                            "<tr><td>3737</td><td>3</td></tr>",
+                            "<tr><td>3313</td><td>2</td></tr>",
+                            "<tr><td>3391</td><td>2</td></tr>",
+                            "<tr><td>3419</td><td>2</td></tr>",
+                            "<tr><td>3914</td><td>2</td></tr>",
+                            "<tr><td>4632</td><td>2</td></tr>",
+                            "<tr><td>4877</td><td>2</td></tr>",
+                            "<tr><td>5459</td><td>2</td></tr>",
+                            "<tr><td>5476</td><td>2</td></tr>",
+                            "<tr><td>5845</td><td>2</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 18
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT TOP 10 \r\n",
+                "    cim as 'Cím',\r\n",
+                "    nettoar as 'Ár'\r\n",
+                "FROM dvd\r\n",
+                "WHERE nettoar IS NOT NULL\r\n",
+                "ORDER BY nettoar DESC"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "983dac9c-49c9-4eca-b8e4-1c649357c247"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(10 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.058"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 19,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "Cím"
+                                    },
+                                    {
+                                        "name": "Ár"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "Cím": "Művészet és mesterség",
+                                    "Ár": "6098"
+                                },
+                                {
+                                    "Cím": "Tankok, tüzérség (2002)",
+                                    "Ár": "6084"
+                                },
+                                {
+                                    "Cím": "Italiano 1-2. (1998) + Installation",
+                                    "Ár": "6082"
+                                },
+                                {
+                                    "Cím": "Manó Puzzle (2002)",
+                                    "Ár": "6078"
+                                },
+                                {
+                                    "Cím": "A jövő titkai - Interaktív horoszkóp (1998)",
+                                    "Ár": "6072"
+                                },
+                                {
+                                    "Cím": "Manó Angol 2. (2000)",
+                                    "Ár": "6068"
+                                },
+                                {
+                                    "Cím": "Zöld Ödön a földgömbön",
+                                    "Ár": "6065"
+                                },
+                                {
+                                    "Cím": "Capitalism II. (2001)",
+                                    "Ár": "6062"
+                                },
+                                {
+                                    "Cím": "Target English (1998)",
+                                    "Ár": "6061"
+                                },
+                                {
+                                    "Cím": "Szabadságharc 1848-49 (1988)",
+                                    "Ár": "6060"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>Cím</th><th>Ár</th></tr>",
+                            "<tr><td>Művészet és mesterség</td><td>6098</td></tr>",
+                            "<tr><td>Tankok, tüzérség (2002)</td><td>6084</td></tr>",
+                            "<tr><td>Italiano 1-2. (1998) + Installation</td><td>6082</td></tr>",
+                            "<tr><td>Manó Puzzle (2002)</td><td>6078</td></tr>",
+                            "<tr><td>A jövő titkai - Interaktív horoszkóp (1998)</td><td>6072</td></tr>",
+                            "<tr><td>Manó Angol 2. (2000)</td><td>6068</td></tr>",
+                            "<tr><td>Zöld Ödön a földgömbön</td><td>6065</td></tr>",
+                            "<tr><td>Capitalism II. (2001)</td><td>6062</td></tr>",
+                            "<tr><td>Target English (1998)</td><td>6061</td></tr>",
+                            "<tr><td>Szabadságharc 1848-49 (1988)</td><td>6060</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 19
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                ""
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "04c0ad21-a047-4ef3-ace1-c65b92ee1677"
             },
             "outputs": [],
             "execution_count": null
