--- a/hazi_adatprofilozas.ipynb
+++ b/hazi_adatprofilozas.ipynb
@@ -2219,49 +2219,47 @@
                 "azdata_cell_guid": "540e5038-2161-4b73-a715-3cc04ef7dd10"
             },
             "outputs": [
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "(1 row affected)"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "display_data",
-                    "data": {
-                        "text/html": "Total execution time: 00:00:00.006"
-                    },
-                    "metadata": {}
-                },
-                {
-                    "output_type": "execute_result",
-                    "metadata": {},
-                    "execution_count": 14,
-                    "data": {
-                        "application/vnd.dataresource+json": {
-                            "schema": {
-                                "fields": [
-                                    {
-                                        "name": "(No column name)"
-                                    }
-                                ]
-                            },
-                            "data": [
-                                {
-                                    "(No column name)": "32"
-                                }
-                            ]
-                        },
-                        "text/html": [
-                            "<table>",
-                            "<tr><th>(No column name)</th></tr>",
-                            "<tr><td>32</td></tr>",
-                            "</table>"
-                        ]
+{
+    "output_type": "display_data",
+    "data": {
+        "text/html": "(1 row affected)"
+    },
+    "metadata": {}
+}, {
+    "output_type": "display_data",
+    "data": {
+        "text/html": "Total execution time: 00:00:00.011"
+    },
+    "metadata": {}
+}, {
+    "output_type": "execute_result",
+    "metadata": {},
+    "execution_count": 49,
+    "data": {
+        "application/vnd.dataresource+json": {
+            "schema": {
+                "fields": [
+                    {
+                        "name": "Több elemes számok (db)"
                     }
+                ]
+            },
+            "data": [
+                {
+                    "Több elemes számok (db)": "32"
                 }
-            ],
-            "execution_count": 14
+            ]
+        },
+        "text/html": [
+            "<table>",
+            "<tr><th>Több elemes számok (db)</th></tr>",
+            "<tr><td>32</td></tr>",
+            "</table>"
+        ]
+    }
+}
+],
+            "execution_count": 49
         },
         {
             "cell_type": "code",
@@ -2403,7 +2401,7 @@
         {
             "cell_type": "code",
             "source": [
-                "SELECT TOP 10 \r\n",
+                "SELECT top 10 \r\n",
                 "    nettoar as 'Ár',\r\n",
                 "    COUNT(*) as 'Előfordulás'\r\n",
                 "FROM dvd\r\n",
@@ -2433,7 +2431,7 @@
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 18,
+                    "execution_count": 48,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -2507,7 +2505,7 @@
                     }
                 }
             ],
-            "execution_count": 18
+            "execution_count": 48
         },
         {
             "cell_type": "code",
@@ -2704,14 +2702,14 @@
                 {
                     "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00.005"
+                        "text/html": "Total execution time: 00:00:00.009"
                     },
                     "metadata": {}
                 },
                 {
                     "output_type": "execute_result",
                     "metadata": {},
-                    "execution_count": 29,
+                    "execution_count": 45,
                     "data": {
                         "application/vnd.dataresource+json": {
                             "schema": {
@@ -2775,7 +2773,7 @@
                     }
                 }
             ],
-            "execution_count": 29
+            "execution_count": 45
         },
         {
             "cell_type": "code",
@@ -3065,50 +3063,52 @@
                 "azdata_cell_guid": "4f635311-aff1-4526-bf8f-a82c4b5c624a"
             },
             "outputs": [
-{
-    "output_type": "display_data",
-    "data": {
-        "text/html": "(1 row affected)"
-    },
-    "metadata": {}
-}, {
-    "output_type": "display_data",
-    "data": {
-        "text/html": "Total execution time: 00:00:00.005"
-    },
-    "metadata": {}
-}, {
-    "output_type": "execute_result",
-    "metadata": {},
-    "execution_count": 43,
-    "data": {
-        "application/vnd.dataresource+json": {
-            "schema": {
-                "fields": [
-                    {
-                        "name": "Rekordok száma"
-                    },
-                    {
-                        "name": "Különböző készlet értékek száma"
-                    }
-                ]
-            },
-            "data": [
                 {
-                    "Rekordok száma": "318",
-                    "Különböző készlet értékek száma": "2"
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.005"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 43,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "Rekordok száma"
+                                    },
+                                    {
+                                        "name": "Különböző készlet értékek száma"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "Rekordok száma": "318",
+                                    "Különböző készlet értékek száma": "2"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>Rekordok száma</th><th>Különböző készlet értékek száma</th></tr>",
+                            "<tr><td>318</td><td>2</td></tr>",
+                            "</table>"
+                        ]
+                    }
                 }
-            ]
-        },
-        "text/html": [
-            "<table>",
-            "<tr><th>Rekordok száma</th><th>Különböző készlet értékek száma</th></tr>",
-            "<tr><td>318</td><td>2</td></tr>",
-            "</table>"
-        ]
-    }
-}
-],
+            ],
             "execution_count": 43
         },
         {
